# PhysarumSDPSolver

./: .gitignore  .root_indicator  CMakeLists.txt  README.md  SDPSolver-inl.h  SDPSolver.h  input.txt  log.ipynb  main.cpp  main.py  requirements.txt  sample_C_zero_eig.dat-s  summarize.py
Prototype/: .~lock.summary-results.csv#  gather_results.py  info.csv  info.txt  main.py  mat_utils.py  physarum_solver.py  prototype.py  res_parser.py  results.txt  run_test_data.py  sample_prototype.txt  summary-results.csv
SDPA/: CLI.py  CLI.spec  FORMAT.dat-s  random_test_gen.py  test_generator.py  vertex_cover_test_gen.py
SDPA/CLI/: CLI.py  CLI.spec  enums.py  test_changer.py  test_gen_utils.py  test_generator.py  tester.py  vertex_cover_test_gen.py
SDPA/testSet/: input.txt
SDPA/windows/: README.txt  SolveTestSet.bat
configurations/: cfg_xc_1.yaml  cfg_xc_1_maxcut.yaml  cfg_xc_2.yaml  cfg_xx_1.yaml  cfg_xx_1_maxcut.yaml  legacy_cfg_1.yaml  legacy_cfg_2.yaml  yuans_cfg.yaml
data/: FORMAT.md
data/testset0/: flow.dat-s  flow.dat-s.physarum_out  sample_0.dat-s.res
experiments/: results.json  summary-results.csv
physarum_sdp/: .root_indicator  config.py
physarum_sdp/.depricated/: parsing.py  physarum_solver.py  prototype.py  res_parser.py
physarum_sdp/data/: __init__.py  base_registry.py  dat_s.py  parser.py  registry_base.py
physarum_sdp/generators/: max_cut_test_gen.py
physarum_sdp/matrix_utils/: __init__.py  base_matrix.py  base_registry.py  block_dense.py  dense_matrix.py
physarum_sdp/solvers/: __init__.py  (+8 more)
src/: BaseSDPSolver.cpp  BaseSDPSolver.h  CustomExceptions.h  GeneralizedEigenvalueSolver.cpp  GeneralizedEigenvalueSolver.h  IdentityCSDPSolver.cpp  SDPResult.cpp  SDPResult.h  SDPSolver.cpp  SDPSolver.h  SDPSolverDerivative.cpp  SDPSolverDerivative.h  SDPSolver_derivativeMethod.cpp  main.cpp
tester/: HAMIDREZA_bash.sh  tester.sh
(+692 files in other folders)
